# pfcalcbetter

pfcalcbetter/: .clang-format  .gitignore  CMakeCache.txt  CMakeLists-old.txt  CMakeLists.txt  Makefile  arena.c  arena.h  args.c  args.h  atest  atest.c  build.sh  cmake_install.cmake  input.txt  main  main.c  randgen.py  rin.txt  stack.c  stack.h  token.c  token.h  utils.c  utils.h
pfcalcbetter.xcodeproj/: project.pbxproj
pfcalcbetter.xcodeproj/xcuserdata/thomaspovinelli.xcuserdatad/xcschemes/: xcschememanagement.plist
pfcalcbetter/.cache/clangd/index/: arena.c.9CEEB410E5C13366.idx  arena.h.A770A0B3B4612A09.idx  args.c.B1CA48D619AB984B.idx  args.h.55D747BB0F4CEF0F.idx  atest.c.CE65444597F4A7AB.idx  main.c.C0067570DD61FFE3.idx  stack.c.FCD51282456F93F6.idx  stack.h.4A8942995E2F78D3.idx  token.c.027078FA1B16764B.idx  token.h.13BB113B61E001C1.idx  utils.c.1D83687B99A82FA3.idx  utils.h.F5BE42E3DCCC871C.idx
pfcalcbetter/main.dSYM/Contents/Resources/DWARF/: main
